--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li><a href="#about">Sobre nós</a></li>
                         <li><a href="#services">Serviços</a></li>
                         <li><a href="#contact">Contato</a></li>
-                        <li><a href=> Assinatura</a></li>
+                        <li><a href="https://rocketpay-samuel-mendes.vercel.app/">Assinatura</a></li>
                     </ul>
               </div> 
             </nav>
